# meson-buildsystem

./: .gitmodules  README.md
analysis/complexity/: meson.build
analysis/cppcheck/: meson.build
analysis/sloccount/: meson.build
analysis/vale/: meson.build
architecture/: meson.build
compiler/: meson.build
compiler/clang/: meson.build
compiler/cpp/: meson.build
compiler/gcc/: meson.build
cross/: STM32F103VBIx.txt  arduino_mega.txt  arduino_uno.txt  arm.txt  armcc.txt  armclang.txt  cortex-a53.txt  cortex-m3.txt  cortex-m4_hardfloat.txt  cortex-m7_hardfloat.txt
cross/clang/: clang_cortex-m4.txt  clang_x86_64.txt
cross/gcc/arm/: gcc_arm_cortex-m0plus.txt  gcc_arm_cortex-m4.txt  gcc_arm_cortex-m4_gcc-stdlib.txt  nrf52840.txt
cross/gcc/osx-brew/: gcc.txt
doc/: clang.md  cross_compiling.md  gcc.md  reference_tables.md
docs/doxygen/: Doxyfile.in  meson.build
ea-stdlib/: meson.build
example/: CI.jenkinsfile  Jenkinsfile  Makefile  meson.build
format/: format.sh  meson.build
linker/linker-map/: meson.build
linker/linker-script-as-property/: meson.build
native/: gcc-12.txt  gcc-13.txt  gcc-14.txt  gcc-7.txt  gcc-8.txt  gcc.txt  macos-homebrew-clang-arm.txt  osx-mainline-clang.txt
scripts/: complexity_check.sh  generateReportCIJobID.sh  git_timestamps.sh  git_timestamps_all_files.sh  prepare_cmake.sh
test/catch2/: meson.build
test/cmocka/: meson.build
tooling/: tooling_examples.build
tooling/clang-tidy/: clang-tidy.sh
tooling/cppcheck/: cppcheck_xml.sh
tooling/doxygen/: doxygen.sh
tooling/lizard/: complexity_check.sh
